@startuml
package freebds <<Rectangle>> #LightGray {
class user {
    - id
    - username
    - password
    - role_id
    - email
    - last_login_date
}

class role {
    - id
    - name
}

class library {
    - id
    - name
    - description
}

class users_library {
    - user_id
    - library_id
}

class library_content {
    - id
    - library_id
    - graphicnovel_id
    - is_favorite
    - is_physical
    - is_numeric
    - local_storage
    - creation_date
    - creation_user
    - last_update_date
    - last_update_user
}

class library_serie_content {
    - id
    - library_id
    - serie_id
    - is_favorite
    - creation_date
    - creation_user
    - last_update_date
    - last_update_user
}

User -- Role
User - Library
(User, Library) . UserLibrary
}

package referential <<Rectangle>> #GreenYellow {

note as N1
  This note is <u>also</u>
  <b><color:royalBlue>on several</color>
  <s>words</s> lines
  And this is hosted by
end note

class Author {
    - id
    - external_id
    - lastname
    - firstname
    - nickname
    - nationality
    - birthdate
    - decease_date
    - photo_url
    - site_url
    - is_scraped
    - scrap_url
    - biography
    - creation_date
    - creation_user
    - last_update_date
    - last_update_user
}

class Serie {
    - id
    - externai_Id
    - title
    - status
    - origin
    - langage
    - synopsys
    - pictureUrl
    - pictureThumbnailUrl
    - scrapUrl
}

class Category {
    - id
    - name
}

class SerieCategory {
    - idSerie
    - idCategorie
}

class GraphicNovel {
    - id
    - externalId
    - tome
    - noEdition
    - title
    - publicationDate
    - releaseDate
    - isbn
    - isFirstEdition
    - isIntegral
    - isBroche
    - infosEdition
    - reeditionsUrl
    - coverPictureUrl
    - coverThumbnailUrl
    - backCoverPictureUrl
    - backCoverThumbnailUrl
    - pagePictureUrl
    - pageThumbnailUrl
    - scrapUrl
}

class GraphicNovelAuthors {
    - idGraphicNovel
    - idAuthor
    - role
}

class Publisher {
    - id
    - name
    - siteUrl
}

Serie "0..n" - "1..1" GraphicNovel : contains
(Serie, Category) . SerieCategory
GraphicNovel - Author : is written by
(GraphicNovel, Author) . GraphicNovelAuthors
GraphicNovel "1..1" -- "1..n" Publisher : is edited by
}

@enduml



















